--- a/simfast21.ini
+++ b/simfast21.ini
@@ -37,6 +37,8 @@ sigma8 = 0.81
 
 
 ### Halos ###
+# Minimum number of cells in one dimension above which we can use the halo excursion set formalism (e.g. sets the minimum resolution for the method)
+ncells_halo = 2
 # Linear number of cells of the density box used in determining colapsed halos
 N_halo = 600
 # Linear number of cells of the smoothed boxes for the determination of the ionization, J_alpha,
