--- a/simfast21.ini
+++ b/simfast21.ini
@@ -50,11 +50,14 @@ STa = 0.73
 STb = 0.34
 STc = 0.81
 # Use fcoll to account for unresolved halos?
-Use_Fcoll = T
+Use_subgrid = T
 # Maximum halo size in Mpc
 halo_Rmax = 40
 # Minimum halo mass in Msun
 halo_Mmin = 1.0e8
+# Ratio to decrease halo radius during halo finding cycle
+halo_step = 1.3
+
 
 ### Ionization ###
 #Efficiency parameter for the determination of HII regions
