Last Simfast21 fcoll version
Corrects some bugs with reading CAMB park file. Faster version to write
the halo catalogues. Several tools to analyse the halo output (power
spectrum, bias, mass function).

--- a/simfast21.ini
+++ b/simfast21.ini
@@ -4,9 +4,9 @@
 
 ### Simulation ###
 # Number of openmp threads (Must compile with openmp flag)
-nthreads = 30
+nthreads = 16
 # limits to calculate the HII boxes and 21cm temperature:
-zmax = 28
+zmax = 14
 zmin = 6
 dz = 0.5
 # seed (long) used to generate the Gaussian field
@@ -22,9 +22,9 @@ Vel_comp = 3
 ### Cosmology ###
 # If use_camb_matterpower=T, simfast21 will read camb's parameter file (params.ini)
 # for cosmological parameters and matter power spectrum filename. The user
-# must enter the path of the CAMB directory containing these files  
-use_camb_matterpower = F
-#camb_file = CAMB_params.ini
+# must enter the path of the CAMB directory containing these files and make sure kmax is enough for the resolution of the box.
+use_camb_matterpower = T
+camb_file = params.ini
 # If use_camb_matterpower=F, the fitting transfer functions of Eisenstein & Hu will
 # be used, and the user should set the relevant cosmological parameters here
 # with omega_matter being the total matter density (cdm+baryon) //Komatsu 2011
@@ -33,12 +33,11 @@ omega_baryon = 0.046
 omega_lambda = 0.73
 hubble = 0.71
 spectral_index = 0.96
+# !Note!: if using CAMB it will not use the sigma8 value below - it assumes CAMB values are already normalised to required sigma8.
 sigma8 = 0.81
 
 
 ### Halos ###
-# Minimum number of cells in one dimension above which we can use the halo excursion set formalism (e.g. sets the minimum resolution for the method)
-ncells_halo = 2
 # Linear number of cells of the density box used in determining colapsed halos
 N_halo = 600
 # Linear number of cells of the smoothed boxes for the determination of the ionization, J_alpha,
@@ -53,6 +52,8 @@ STc = 0.81
 Use_subgrid = T
 # Maximum halo size in Mpc
 halo_Rmax = 40
+# Minimum halo radius in cell size units above which we can use the halo excursion set formalism (e.g. sets the minimum resolution for the method)
+halo_Rmin_dx = 2.0
 # Minimum halo mass in Msun
 halo_Mmin = 1.0e8
 # Ratio to decrease halo radius during halo finding cycle
