Different algorithm for get_halos. halos structure doesn’t include radius R now. using mass bins halo_Nbins instead of R_ratio for the halo mass resolution.

--- a/simfast21.ini
+++ b/simfast21.ini
@@ -4,16 +4,16 @@
 
 ### Simulation ###
 # Number of openmp threads (Must compile with openmp flag)
-nthreads = 16
+nthreads = 48
 # limits to calculate the HII boxes and 21cm temperature:
-zmax = 14
-zmin = 6
+zmax = 8
+zmin = 8
 dz = 0.5
 # seed (long) used to generate the Gaussian field
 # set it to < 1 to use time()
 seed = 123456789
 # Physical length size of simulation in Mpc
-sim_length = 100
+sim_length = 500
 #Velocity component used to compute 21 cm brightness temperature maps
 #(1- X; 2-Y; 3-Z) - Z is fastest moving index
 Vel_comp = 3
@@ -23,7 +23,7 @@ Vel_comp = 3
 # If use_camb_matterpower=T, simfast21 will read camb's parameter file (params.ini)
 # for cosmological parameters and matter power spectrum filename. The user
 # must enter the path of the CAMB directory containing these files and make sure kmax is enough for the resolution of the box.
-use_camb_matterpower = T
+use_camb_matterpower = F
 camb_file = params.ini
 # If use_camb_matterpower=F, the fitting transfer functions of Eisenstein & Hu will
 # be used, and the user should set the relevant cosmological parameters here
@@ -39,10 +39,10 @@ sigma8 = 0.81
 
 ### Halos ###
 # Linear number of cells of the density box used in determining colapsed halos
-N_halo = 600
+N_halo = 1200
 # Linear number of cells of the smoothed boxes for the determination of the ionization, J_alpha,
 # T_k and 21-cm brightness temperature fields
-N_smoothed = 300
+N_smoothed = 600
 # Parameters for non-spherical halo collapse as defined by Seth & Tormen (Default values are from Jenkins et al. 2001)  
 critical_overdensity = 1.68
 STa = 0.73
@@ -56,9 +56,8 @@ halo_Rmax = 40
 halo_Rmin_dx = 2.0
 # Minimum halo mass in Msun
 halo_Mmin = 1.0e8
-# Ratio to decrease halo radius during halo finding cycle
-halo_step = 1.3
-
+# Number of logarithmic halo mass bins
+halo_Nbins = 40
 
 ### Ionization ###
 #Efficiency parameter for the determination of HII regions
@@ -96,7 +95,7 @@ alpha_Lya = 0.9
 #True if user wants a binary catalog of ajusted halos in addition to the collapsed mass box 
 NL_halo_catalog = F
 #True if user wants to write the unsmoothed non linear density box for each redshift (for N_halo > 768 => 1.8 GB files ) 
-Original_nldensity_box = F
+Original_nldensity_box = T
 
 
 
