drop global_Rhalo drop use of zmin zmax dz for input parameters use Nbins for bubble radius. correct minimum radius for bubble small changes to tools for clarity (in new folder)

--- a/simfast21.ini
+++ b/simfast21.ini
@@ -48,7 +48,7 @@ critical_overdensity = 1.68
 STa = 0.73
 STb = 0.34
 STc = 0.81
-# Use fcoll to account for unresolved halos?
+# Use subgrid to account for unresolved halos?
 Use_subgrid = T
 # Maximum halo size in Mpc
 halo_Rmax = 40
@@ -64,7 +64,8 @@ halo_Nbins = 40
 Ion_eff = 8.0
 # Maximum bubble size in Mpc
 bubble_Rmax = 40
-
+# Number of bubble radius logarithmic bins
+bubble_Nbins = 50
 
 ### Lya + xrays ###
 #Compute Lya alpha coupling and gas temperature fluctations
