file name changes
Minor corrections to name changes.

--- a/simfast21.ini
+++ b/simfast21.ini
@@ -6,14 +6,14 @@
 # Number of openmp threads (Must compile with openmp flag)
 nthreads = 48
 # limits to calculate the HII boxes and 21cm temperature:
-zmax = 8
-zmin = 8
-dz = 0.5
+zmax = 20
+zmin = 5
+dz = 0.1
 # seed (long) used to generate the Gaussian field
 # set it to < 1 to use time()
 seed = 123456789
 # Physical length size of simulation in Mpc
-sim_length = 500
+sim_length = 100
 #Velocity component used to compute 21 cm brightness temperature maps
 #(1- X; 2-Y; 3-Z) - Z is fastest moving index
 Vel_comp = 3
@@ -39,10 +39,10 @@ sigma8 = 0.81
 
 ### Halos ###
 # Linear number of cells of the density box used in determining colapsed halos
-N_halo = 1200
+N_halo = 600
 # Linear number of cells of the smoothed boxes for the determination of the ionization, J_alpha,
 # T_k and 21-cm brightness temperature fields
-N_smoothed = 600
+N_smoothed = 300
 # Parameters for non-spherical halo collapse as defined by Seth & Tormen (Default values are from Jenkins et al. 2001)  
 critical_overdensity = 1.68
 STa = 0.73
@@ -75,7 +75,7 @@ bubble_Nbins = 50
 use_Lya_xrays = T
 #If Lya_and_Tk = T, set parameters here
 # limits to calculate SFR, Lya, xray:
-Zminsfr = 10.0
+Zminsfr = 7.0
 #Star formation rate efficiency f*
 fstar = 0.025
 # Enu0=1 KeV - goes with L0 value 
@@ -96,7 +96,7 @@ alpha_Lya = 0.9
 #True if user wants a binary catalog of ajusted halos in addition to the collapsed mass box 
 NL_halo_catalog = F
 #True if user wants to write the unsmoothed non linear density box for each redshift (for N_halo > 768 => 1.8 GB files ) 
-Original_nldensity_box = T
+Original_nldensity_box = F
 
 
 
