changed xHlim parameter to global

--- a/simfast21.ini
+++ b/simfast21.ini
@@ -60,8 +60,10 @@ halo_Mmin = 1.0e8
 halo_Nbins = 40
 
 ### Ionization ###
-#Efficiency parameter for the determination of HII regions
+# Efficiency parameter for the determination of HII regions
 Ion_eff = 8.0
+# cutoff parameter for reionization - once the neutral fraction is above this, stop the bubble calculation and assume all is neutral above that redshift
+Ion_cutoff = 0.999
 # Maximum bubble size in Mpc
 bubble_Rmax = 40
 # Number of bubble radius logarithmic bins
