--- a/simfast21.ini
+++ b/simfast21.ini
@@ -60,6 +60,9 @@ halo_Mmin = 1.0e8
 halo_Nbins = 40
 
 ### Ionization ###
+#Note: this version of the code uses fitting functions for the recombination and ionisation rate. If you want to change those, see user_functions.c
+# escape fraction - regulates the ionisation rate - see user_functions.c
+fesc = 0.06
 # cutoff parameter for reionization - once the neutral fraction is above this, stop the bubble calculation and assume all is neutral above that redshift
 Ion_cutoff = 0.999
 # Maximum bubble size in Mpc
