--- a/simfast21.ini
+++ b/simfast21.ini
@@ -71,11 +71,13 @@ bubble_Rmax = 40
 bubble_Nbins = 50
 
 ### Lya + xrays ###
+# decide if SFR boxes should be written for all z or not
+use_SFR = F
 #Compute Lya alpha coupling and gas temperature fluctations
 #this should be set to T for accurate brightness temperature maps
 #Set it to F only for redshifts lower than 9 or for comparision reasons at 
 #higher redshifts  
-use_Lya_xrays = T
+use_Lya_xrays = F
 #If Lya_and_Tk = T, set parameters here
 # limits to calculate SFR, Lya, xray:
 Zminsfr = 7.0
