--- a/simfast21.ini
+++ b/simfast21.ini
@@ -39,10 +39,10 @@ sigma8 = 0.81
 
 ### Halos ###
 # Linear number of cells of the density box used in determining colapsed halos
-N_halo = 600
+N_halo = 512
 # Linear number of cells of the smoothed boxes for the determination of the ionization, J_alpha,
 # T_k and 21-cm brightness temperature fields
-N_smoothed = 300
+N_smoothed = 256
 # Parameters for non-spherical halo collapse as defined by Seth & Tormen (Default values are from Jenkins et al. 2001)  
 critical_overdensity = 1.68
 STa = 0.73
@@ -58,6 +58,8 @@ halo_Rmin_dx = 2.0
 halo_Mmin = 1.0e8
 # Number of logarithmic halo mass bins
 halo_Nbins = 40
+# decide if SFRD boxes should be written for all z or not
+use_SFR = F
 
 ### Ionization ###
 #Note: this version of the code uses fitting functions for the recombination and ionisation rate. If you want to change those, see user_functions.c
@@ -71,8 +73,6 @@ bubble_Rmax = 40
 bubble_Nbins = 50
 
 ### Lya + xrays ###
-# decide if SFR boxes should be written for all z or not
-use_SFR = F
 #Compute Lya alpha coupling and gas temperature fluctations
 #this should be set to T for accurate brightness temperature maps
 #Set it to F only for redshifts lower than 9 or for comparision reasons at 
@@ -96,8 +96,6 @@ alpha_Lya = 0.9
 
 
 ### Flags for intermediate output files ###
-#True if user wants a binary catalog of ajusted halos in addition to the collapsed mass box 
-NL_halo_catalog = F
 #True if user wants to write the unsmoothed non linear density box for each redshift (for N_halo > 768 => 1.8 GB files ) 
 Original_nldensity_box = F
 
