--- a/simfast21.ini
+++ b/simfast21.ini
@@ -1,20 +1,21 @@
 
 # Parameters for SimFast21
 
+# Note: some of the parameters/functions can be found in user_functions.c
 
 ### Simulation ###
 # Number of openmp threads (Must compile with openmp flag)
 nthreads = 48
 # limits to calculate the HII boxes and 21cm temperature:
-zmax = 14
-zmin = 5
-dz = 1.0
+zmax = 14 # maximum redshift
+zmin = 5    # minimum redshift
+dz = 1.0     # z interval
 # seed (long) used to generate the Gaussian field
 # set it to < 1 to use time()
 seed = 123456789
 # Physical length size of simulation in Mpc
 sim_length = 100
-#Velocity component used to compute 21 cm brightness temperature maps
+#Velocity component used to compute 21 cm brightness temperature maps (line of sight of observations)
 #(1- X; 2-Y; 3-Z) - Z is fastest moving index
 Vel_comp = 3
 
@@ -38,23 +39,25 @@ sigma8 = 0.81
 
 
 ### Halos ###
-# Linear number of cells of the density box used in determining colapsed halos
+# Linear number of cells (along one side) of the density box used in determining colapsed halos
+# try to use numbers that are products of small primes (2, 3, 5)
 N_halo = 512
-# Linear number of cells of the smoothed boxes for the determination of the ionization, J_alpha,
+# Linear number of cells (along one side) of the smoothed boxes for the determination of the ionization, J_alpha,
 # T_k and 21-cm brightness temperature fields
+# try to use numbers that are products of small primes (2, 3, 5)
 N_smoothed = 256
 # Parameters for non-spherical halo collapse as defined by Seth & Tormen (Default values are from Jenkins et al. 2001)  
 critical_overdensity = 1.68
 STa = 0.73
 STb = 0.34
 STc = 0.81
-# Use subgrid to account for unresolved halos?
+# Use subgrid to account for unresolved halos? (F/T)
 Use_subgrid = T
 # Maximum halo "size" in Mpc (maximum size for sphere)
 halo_Rmax = 40
 # Minimum halo radius in cell size units above which we can use the halo excursion set formalism (e.g. sets the minimum resolution for the method)
 halo_Rmin_dx = 2.0
-# Minimum halo mass in Msun
+# Minimum halo mass in Msun that can hold galaxies
 halo_Mmin = 1.0e8
 # Number of logarithmic halo mass bins
 halo_Nbins = 40
@@ -69,7 +72,7 @@ fesc = 0.06
 Ion_cutoff = 0.999
 # Maximum bubble size in Mpc
 bubble_Rmax = 40
-# Number of bubble radius logarithmic bins
+# Number of logarithmic bins for bubble radius
 bubble_Nbins = 50
 
 ### Lya + xrays ###
@@ -81,18 +84,16 @@ use_Lya_xrays = F
 #If Lya_and_Tk = T, set parameters here
 # limits to calculate SFR, Lya, xray:
 Zminsfr = 12.0
+# Maximum distance to calculate Lya flux in Mpc #
+flux_Rmax = 70
+
+# x-ray spectral energy distribution function (number of photons per unit comoving volume per unit time and frequency) = e_X = (L0/Enu0)*(Enu0/Enu)^(alpha_s+1)
 # Enu0=1 KeV - goes with L0 value 
 # L0= 5.7e29; - used L0= 5.7e36 erg/s/Mpc^3/eV converted to W/Mpc^3/eV - 1/eV instead of 1/nu due to dE integration instead of dnu integration
 Enu0 = 1000 
 # spectral index for x ray emission (nu^-alpha_s)
 alpha_s = 1.5  
 L0 = 5.7e29 
-# Maximum distance to calculate Lya flux in Mpc #
-flux_Rmax = 70
-# number of Lyn photons per baryon per frequency - use: A*nu^-alpha
-# gives 20000 photons between Lya and Ly_limit
-A_Lya = 1979.878526
-alpha_Lya = 0.9
 
 
 ### Flags for intermediate output files ###
