--- a/simfast21.ini
+++ b/simfast21.ini
@@ -61,8 +61,6 @@ halo_Rmin_dx = 2.0
 halo_Mmin = 1.0e8
 # Number of logarithmic halo mass bins
 halo_Nbins = 40
-# decide if SFRD boxes should be written for all z or not
-use_SFR = F
 
 ### Ionization ###
 #Note: this version of the code uses fitting functions for the recombination and ionisation rate. If you want to change those, see user_functions.c
@@ -81,9 +79,10 @@ bubble_Nbins = 50
 #Set it to F only for redshifts lower than 9 or for comparision reasons at 
 #higher redshifts  
 use_Lya_xrays = F
-#If Lya_and_Tk = T, set parameters here
-# limits to calculate SFR, Lya, xray:
+# If use_Lya_xrays = T, SFR will be calculated down to the redshift specified here. Below that, the code just assumes T_S >> T_CMB
 Zminsfr = 12.0
+# decide if SFRD boxes should be written for all z or not. If set to true, it will *always* calculate SFR down to the minimum z of the simulation not Zminsfr
+use_SFR = F
 # Maximum distance to calculate Lya flux in Mpc #
 flux_Rmax = 70
 
