--- a/simfast21.ini
+++ b/simfast21.ini
@@ -5,16 +5,16 @@
 
 ### Simulation ###
 # Number of openmp threads (Must compile with openmp flag)
-nthreads = 48
+nthreads = 24
 # limits to calculate the HII boxes and 21cm temperature:
-zmax = 14 # maximum redshift
-zmin = 5    # minimum redshift
+zmax = 16 # maximum redshift
+zmin = 6    # minimum redshift
 dz = 1.0     # z interval
 # seed (long) used to generate the Gaussian field
 # set it to < 1 to use time()
-seed = 123456789
+seed = -123456789
 # Physical length size of simulation in Mpc
-sim_length = 100
+sim_length = 150
 #Velocity component used to compute 21 cm brightness temperature maps (line of sight of observations)
 #(1- X; 2-Y; 3-Z) - Z is fastest moving index
 Vel_comp = 3
@@ -41,11 +41,11 @@ sigma8 = 0.81
 ### Halos ###
 # Linear number of cells (along one side) of the density box used in determining colapsed halos
 # try to use numbers that are products of small primes (2, 3, 5)
-N_halo = 512
+N_halo = 1200
 # Linear number of cells (along one side) of the smoothed boxes for the determination of the ionization, J_alpha,
 # T_k and 21-cm brightness temperature fields
 # try to use numbers that are products of small primes (2, 3, 5)
-N_smoothed = 256
+N_smoothed = 600
 # Parameters for non-spherical halo collapse as defined by Seth & Tormen (Default values are from Jenkins et al. 2001)  
 critical_overdensity = 1.68
 STa = 0.73
@@ -85,7 +85,6 @@ Zminsfr = 12.0
 use_SFR = F
 # Maximum distance to calculate Lya flux in Mpc #
 flux_Rmax = 70
-
 # x-ray spectral energy distribution function (number of photons per unit comoving volume per unit time and frequency) = e_X = (L0/Enu0)*(Enu0/Enu)^(alpha_s+1)
 # Enu0=1 KeV - goes with L0 value 
 # L0= 5.7e29; - used L0= 5.7e36 erg/s/Mpc^3/eV converted to W/Mpc^3/eV - 1/eV instead of 1/nu due to dE integration instead of dnu integration
