--- a/simfast21.ini
+++ b/simfast21.ini
@@ -7,14 +7,14 @@
 # Number of openmp threads (Must compile with openmp flag)
 nthreads = 24
 # limits to calculate the HII boxes and 21cm temperature:
-zmax = 16 # maximum redshift
+zmax = 15 # maximum redshift
 zmin = 6    # minimum redshift
 dz = 1.0     # z interval
 # seed (long) used to generate the Gaussian field
 # set it to < 1 to use time()
-seed = -123456789
+seed = 123456789
 # Physical length size of simulation in Mpc
-sim_length = 150
+sim_length = 100
 #Velocity component used to compute 21 cm brightness temperature maps (line of sight of observations)
 #(1- X; 2-Y; 3-Z) - Z is fastest moving index
 Vel_comp = 3
@@ -41,6 +41,7 @@ sigma8 = 0.81
 ### Halos ###
 # Linear number of cells (along one side) of the density box used in determining colapsed halos
 # try to use numbers that are products of small primes (2, 3, 5)
+# Note: a "safe" value to resolve all halos masses without using Poisson is a cell size of 0.05 Mpc or better...
 N_halo = 1200
 # Linear number of cells (along one side) of the smoothed boxes for the determination of the ionization, J_alpha,
 # T_k and 21-cm brightness temperature fields
