--- a/simfast21.ini
+++ b/simfast21.ini
@@ -77,7 +77,7 @@ bubble_Nbins = 50
 ### Lya + xrays ###
 #Compute Lya alpha coupling and gas temperature fluctations
 #this should be set to T for accurate brightness temperature maps
-#Set it to F only for redshifts lower than 9 or for comparision reasons at 
+#Set it to F only for redshifts lower than 9 or for comparison reasons at 
 #higher redshifts  
 use_Lya_xrays = F
 # If use_Lya_xrays = T, SFR will be calculated down to the redshift specified here. Below that, the code just assumes T_S >> T_CMB
