get halos with log bin
Major change is the use of log bins for the halo finder algorithm and inclusion of the power3d_f tool to calculate power spectrum with floats. Some other minor changes for readability and speed.

--- a/simfast21.ini
+++ b/simfast21.ini
@@ -5,16 +5,16 @@
 
 ### Simulation ###
 # Number of openmp threads (Must compile with openmp flag)
-nthreads = 24
+nthreads = 40
 # limits to calculate the HII boxes and 21cm temperature:
 zmax = 15 # maximum redshift
 zmin = 6    # minimum redshift
 dz = 1.0     # z interval
 # seed (long) used to generate the Gaussian field
 # set it to < 1 to use time()
-seed = 123456789
+seed = -123456789
 # Physical length size of simulation in Mpc
-sim_length = 100
+sim_length = 150
 #Velocity component used to compute 21 cm brightness temperature maps (line of sight of observations)
 #(1- X; 2-Y; 3-Z) - Z is fastest moving index
 Vel_comp = 3
@@ -54,23 +54,19 @@ STb = 0.34
 STc = 0.81
 # Use subgrid to account for unresolved halos? (F/T)
 Use_subgrid = T
-# Maximum halo "size" in Mpc (maximum size for sphere)
-halo_Rmax = 40
-# Minimum halo radius in cell size units above which we can use the halo excursion set formalism (e.g. sets the minimum resolution for the method)
-halo_Rmin_dx = 2.0
 # Minimum halo mass in Msun that can hold galaxies
 halo_Mmin = 1.0e8
-# Number of logarithmic halo mass bins
-halo_Nbins = 40
+# Halo mass resolution in log10
+halo_dlm = 0.2
 
 ### Ionization ###
 #Note: this version of the code uses fitting functions for the recombination and ionisation rate. If you want to change those, see user_functions.c
 # escape fraction - regulates the ionisation rate - see user_functions.c
-fesc = 0.06
+fesc = 0.25
 # cutoff parameter for reionization - once the neutral fraction is above this, stop the bubble calculation and assume all is neutral above that redshift
 Ion_cutoff = 0.999
 # Maximum bubble size in Mpc
-bubble_Rmax = 40
+bubble_Rmax = 60
 # Number of logarithmic bins for bubble radius
 bubble_Nbins = 50
 
@@ -81,9 +77,9 @@ bubble_Nbins = 50
 #higher redshifts  
 use_Lya_xrays = F
 # If use_Lya_xrays = T, SFR will be calculated down to the redshift specified here. Below that, the code just assumes T_S >> T_CMB
-Zminsfr = 12.0
+Zminsfr = 10.0
 # decide if SFRD boxes should be written for all z or not. If set to true, it will *always* calculate SFR down to the minimum z of the simulation not Zminsfr
-use_SFR = F
+use_SFR = T
 # Maximum distance to calculate Lya flux in Mpc #
 flux_Rmax = 70
 # x-ray spectral energy distribution function (number of photons per unit comoving volume per unit time and frequency) = e_X = (L0/Enu0)*(Enu0/Enu)^(alpha_s+1)
